k8s/app/templates/notify/notify-depoly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notify
  template:
    metadata:
      name: notify
      labels:
        app: notify
    spec:
      containers:
      - name: notify
        image: quay.io/prometheusmsteams/prometheus-msteams
        imagePullPolicy: IfNotPresent
        ports:
        - name: notify
          containerPort: 2000
