k8s/app/templates/notify/notify-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notify
  name: notify
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 2000
  selector:
    app: notify
